@@ -6157,7 +6157,7 @@ SCIP_RETCODE checkSolOrig(
    SCIP_Bool             completely,         /**< should all violation be checked? */
    SCIP_Bool             checkbounds,        /**< should the bounds of the variables be checked? */
    SCIP_Bool             checkintegrality,   /**< has integrality to be checked? */
-   SCIP_Bool             checklprows,        /**< have current LP rows to be checked? */
+   SCIP_Bool             checklprows,        /**< have current LP rows (both local and global) to be checked? */
    SCIP_Bool             checkmodifiable     /**< have modifiable constraint to be checked? */
    )
 {
@@ -13828,7 +13828,7 @@ SCIP_RETCODE SCIPcheckCons(
    SCIP_CONS*            cons,               /**< constraint to check */
    SCIP_SOL*             sol,                /**< primal CIP solution */
    SCIP_Bool             checkintegrality,   /**< has integrality to be checked? */
-   SCIP_Bool             checklprows,        /**< have current LP rows to be checked? */
+   SCIP_Bool             checklprows,        /**< have current LP rows (both local and global) to be checked? */
    SCIP_Bool             printreason,        /**< should the reason for the violation be printed? */
    SCIP_RESULT*          result              /**< pointer to store the result of the callback method */
    )
@@ -19357,7 +19357,7 @@ SCIP_RETCODE SCIPtrySol(
    SCIP_Bool             printreason,        /**< should all reasons of violation be printed? */
    SCIP_Bool             checkbounds,        /**< should the bounds of the variables be checked? */
    SCIP_Bool             checkintegrality,   /**< has integrality to be checked? */
-   SCIP_Bool             checklprows,        /**< have current LP rows to be checked? */
+   SCIP_Bool             checklprows,        /**< have current LP rows (both local and global) to be checked? */
    SCIP_Bool*            stored              /**< stores whether given solution was feasible and good enough to keep */
    )
 {
@@ -19405,7 +19405,7 @@ SCIP_RETCODE SCIPtrySolFree(
    SCIP_Bool             printreason,        /**< should all reasons of violations be printed */
    SCIP_Bool             checkbounds,        /**< should the bounds of the variables be checked? */
    SCIP_Bool             checkintegrality,   /**< has integrality to be checked? */
-   SCIP_Bool             checklprows,        /**< have current LP rows to be checked? */
+   SCIP_Bool             checklprows,        /**< have current LP rows (both local and global) to be checked? */
    SCIP_Bool*            stored              /**< stores whether solution was feasible and good enough to keep */
    )
 {
@@ -19458,7 +19458,7 @@ SCIP_RETCODE SCIPtryCurrentSol(
    SCIP_HEUR*            heur,               /**< heuristic that found the solution */
    SCIP_Bool             printreason,        /**< should all reasons of violations be printed */
    SCIP_Bool             checkintegrality,   /**< has integrality to be checked? */
-   SCIP_Bool             checklprows,        /**< have current LP rows to be checked? */
+   SCIP_Bool             checklprows,        /**< have current LP rows (both local and global) to be checked? */
    SCIP_Bool*            stored              /**< stores whether given solution was feasible and good enough to keep */
    )
 {
@@ -19477,7 +19477,7 @@ SCIP_RETCODE SCIPcheckSol(
    SCIP_Bool             printreason,        /**< should all reasons of violations be printed? */
    SCIP_Bool             checkbounds,        /**< should the bounds of the variables be checked? */
    SCIP_Bool             checkintegrality,   /**< has integrality to be checked? */
-   SCIP_Bool             checklprows,        /**< have current LP rows to be checked? */
+   SCIP_Bool             checklprows,        /**< have current LP rows (both local and global) to be checked? */
    SCIP_Bool*            feasible            /**< stores whether given solution is feasible */
    )
 {
